--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>6.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
